Created bubbles API. Code is structured.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html lang="en">
 <head>
     <title>Пузырьки</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/BubblesAPI.js"></script>
+    <script src="js/main.js"></script>
 </head>
 <body id="mainWindow">
 <div id="buttons">
@@ -11,7 +12,7 @@
     <button id = "generate"><span>Замостить</span></button>
 </div>
 <div id="frameDiv" >
-    <iframe id="iframe"></iframe>
+    <iframe id="iframe" src="html/svgArea.html"></iframe>
 </div>
 </body>
 </html>
